--- a/app/views/admin/materials/_form.html.erb
+++ b/app/views/admin/materials/_form.html.erb
@@ -187,6 +187,14 @@
         <%= f.text_field :share_url, class: "input-xxlarge" %>
       </div>
     </div>
+
+    <div class="control-group">
+      <label class="control-label">朋友圈链接</label>
+      <div class="controls">
+        <%= f.text_field :pyq_url, class: "input-xxlarge" %>
+      </div>
+    </div>
+
   <% end %>
   <div class="control-group">
     <label class="control-label">描述</label>
