--- a/app/views/layouts/custom.html.erb
+++ b/app/views/layouts/custom.html.erb
@@ -11,7 +11,7 @@
       <%= yield %>
     <% else %>
       <%= render 'custom/shared/nav' %>
-      <% if controller_name != "home" %>
+      <% if controller_name != "site" %>
         <div class="container-fluid">
           <div class="row-fluid">
             <div class="span2"> 
