--- a/app/views/weitest/o2o.html.erb
+++ b/app/views/weitest/o2o.html.erb
@@ -139,7 +139,7 @@ share_api();
   <li><img src="http://wx.51self.com/img/menu/icon_03.png"><a href='/wshows/27?beaconid=<%=@beacon.url %>&game_id=<%= @material.id%>'>今日排行版</a></li>
   <!--
   <li><img src="http://wx.51self.com/img/menu/icon_04.png"><a href='/wshows/7?beaconid=<%= @beacon.url %>&game_id=<%= @material.id%>'><%= @beacon.name %>动态</a></li>
-  <li><img src="http://wx.51self.com/img/menu/icon_01.png"><a href='/<%= @beacon.url %>/home'>@<%=@beacon.name %></a></li>
+  <li><img src="http://wx.51self.com/img/menu/icon_01.png"><a href='/<%= @beacon.url %>/site'>@<%=@beacon.name %></a></li>
   <li id="game9gmenu_credit"><img src="http://wx.51self.com/img/menu/icon_05.png"><a href='/wshows/5'>我的游戏</a></li>
    -->
 </ul>
