--- a/app/views/shared/_analysis.html.erb
+++ b/app/views/shared/_analysis.html.erb
@@ -1,3 +1,3 @@
 <div style="display: none;">                                                   
-  <script src="http://v1.cnzz.com/z_stat.php?id=1000438304&web_id=1000438304" language="JavaScript"></script>
+  <script src="http://s95.cnzz.com/z_stat.php?id=1254086960&web_id=1254086960" language="JavaScript"></script>
 </div>   
