--- a/app/views/admin/shared/_nav.html.erb
+++ b/app/views/admin/shared/_nav.html.erb
@@ -16,8 +16,8 @@
           <li class="<%= controller_name.in?(['materials']) ? 'active' : '' %>"> 
             <%= link_to '应用管理', [:admin,:materials] %> 
           </li>
-          <li class="<%= controller_name.in?(['wcards']) ? 'active' : '' %>">
-            <%= link_to '微卡微秀管理', [:admin, :wcards] %>
+          <li class="<%= controller_name.in?(['ads']) ? 'active' : '' %>">
+            <%= link_to '广告管理', [:admin, :ads] %>
           </li>
           
           <li class="<%= controller_name.in?(['wshows']) ? 'active' : '' %>">
