--- a/app/views/layouts/main.html
+++ b/app/views/layouts/main.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html ng-app="y1y">
+<html ng-app='y1y'>
 <head>
   <title>疯狂摇一摇</title>
   <%= stylesheet_link_tag    "application", media: "all" %>
   <%= javascript_include_tag "application", controller_name %>
   <%= csrf_meta_tags %>
-    <script type="text/javascript" src="http://cdn.hcharts.cn/jquery/jquery-1.8.3.min.js"></script>
+ <script type="text/javascript" src="http://cdn.hcharts.cn/jquery/jquery-1.8.3.min.js"></script>
   <script type="text/javascript" src="http://cdn.hcharts.cn/highcharts/highcharts.js"></script>
   <script type="text/javascript" src="http://cdn.hcharts.cn/highcharts/exporting.js"></script>
 </head>
