--- a/app/assets/templates/statis.html
+++ b/app/assets/templates/statis.html
@@ -3,18 +3,17 @@
     //左侧Javascript代码
     $(function () {
 
-     chart('1340208226','dgbs','巴士摇一摇','#container_busredpack');
-     chart('1365567608','dgbs','巴士摇一摇新','#container_newbusredpack');
+     chart('1365567608','dgbs','巴士摇一摇','#container_newbusredpack');
      chart('1341259419','dgbs','收到一个红包','#container_getredpack');
      chart('1355593447','dgbs','我的红包','#container_myredpack');
 
      function chart(game_url,beacon_url,text,container_id){
       Highcharts.setOptions({
-        colors: ['#058DC7', '#ED561B', '#DDDF00', '#24CBE5', '#64E572', '#FF9655', '#FFF263', '#6AF9C4']
+        colors: ['#058DC7', '#ED561B', '#DDDF00', '#24CBE5', '#64E572', '#FF9655', '#FFF263', '#6AF9C4','#ED561B']
     });
       $.ajax({
         type: "GET",
-        url: "/api/v1/statis/"+beacon_url+"/"+game_url,
+        url: "/normal/v1/statis/"+beacon_url+"/"+game_url,
         data: "json",
         success: function(msg)
         {
@@ -22,6 +21,7 @@
           var categories_data=[];
           var data_data=[];
           var data_person=[];
+          var data_new_person=[];
           var seed_redpack_num=[];
           var social_redpack_num=[];
           var feedback_redpack_num=[];
@@ -35,7 +35,8 @@
           {
             categories_data[i] = uv_sub_group[i]['created_at'];
             data_data[i] = uv_sub_group[i]['per_num'] ; 
-            data_person[i] = uv_sub_group[i]['person_num'];     
+            data_person[i] = uv_sub_group[i]['person_num']; 
+            data_new_person[i] = uv_sub_group[i]['new_person_num'];    
           }
 
           for(var i=0;i<record_sub_group.length;i++)
@@ -82,7 +83,7 @@
             borderWidth: 0
           },
           series: [
-          {name: '单日浏览量(次)',data: data_data},{name:"单日人数(个)",data: data_person},{name:"种子红包数(个)",data: seed_redpack_num},{name:"社交红包数(个)",data: social_redpack_num},{name:"反馈红包数(个)",data: feedback_redpack_num},{name:"种子红包金额(元)",data: seed_redpack},{name:"社交红包金额(元)",data: social_redpack},{name:"反馈红包金额(元)",data: feedback_redpack}
+          {name: '单日浏览量(次)',data: data_data},{name:"单日人数(个)",data: data_person},{name:"单日新增人数(个)",data: data_new_person},{name:"种子红包数(个)",data: seed_redpack_num},{name:"社交红包数(个)",data: social_redpack_num},{name:"反馈红包数(个)",data: feedback_redpack_num},{name:"种子红包金额(元)",data: seed_redpack},{name:"社交红包金额(元)",data: social_redpack},{name:"反馈红包金额(元)",data: feedback_redpack}
           ]
         });
 
@@ -93,7 +94,8 @@
 
 
 </script>
-  <div id="container_busredpack" style="min-width:700px;height:400px"></div>
+
+
   <div id="container_newbusredpack" style="min-width:700px;height:400px"></div>
   <div id="container_getredpack" style="min-width:700px;height:400px"></div>
   <div id="container_myredpack" style="min-width:700px;height:400px"></div>
