--- a/app/views/layouts/main.html
+++ b/app/views/layouts/main.html
@@ -3,7 +3,7 @@
 <head>
   <title>疯狂摇一摇</title>
   <%= stylesheet_link_tag    "application", media: "all" %>
-  <%= javascript_include_tag "application" %>
+  <%= javascript_include_tag "main" %>
   <%= csrf_meta_tags %>
  <script type="text/javascript" src="http://cdn.hcharts.cn/jquery/jquery-1.8.3.min.js"></script>
   <script type="text/javascript" src="http://cdn.hcharts.cn/highcharts/highcharts.js"></script>
