--- a/public/site/css/site.css
+++ b/public/site/css/site.css
@@ -1,4 +1,5 @@
-body{
+html,body{
+    width: 100%;
     margin:0;
     font-family: "Helvetica Neue","Hiragino Sans GB","Microsoft YaHei","\9ED1\4F53",Arial,sans-serif;
     -webkit-font-smoothing: antialiased;
@@ -11,7 +12,7 @@ ul{
 }
 a,a:hover{
     color: #fff;
-    text-decoration: none;   
+    text-decoration: none;
 
 }
 
@@ -25,7 +26,7 @@ a,a:hover{
 
 }
 .home__head-title{
-    width:inherit;
+    width:100%;
     height: 70px;
     background-color: #000;
     color: #fff;
@@ -44,7 +45,7 @@ a,a:hover{
     padding: 0 60px 0 60px ;
 }
 .icon{
-   display: inline-block;
+    display: inline-block;
     float: left;
 
 }
@@ -92,7 +93,7 @@ a,a:hover{
     zoom: 1;
 }
 .home__scene-item{
-    padding: 40px 0;
+    padding: 80px 0;
     border-top: 1px solid #e3e3e3;
 }
 .ui-bfc__left{
@@ -100,7 +101,8 @@ a,a:hover{
 }
 .home__scene-item-img{
     width: 150px;
-    margin-right: 78px;
+    height:300px;
+    margin-right: 200px;
     line-height: 1;
     background: url("../img/phone.jpg") top center no-repeat;
     background-size: contain;
@@ -225,8 +227,12 @@ a,a:hover{
     display: inline-block;
 }
 .video{
-    width: 850px;
-    height: 500px;
+    position: absolute;
+    width: 80%;
+    margin: 0 auto;
     margin-top: 50px;
-    margin-left: 115px;
+}
+.carousel-control{
+    font-size: 80px;
+    padding-top:20%;
 }
