--- a/app/views/admin/bgames/index.html.erb
+++ b/app/views/admin/bgames/index.html.erb
@@ -6,6 +6,7 @@
     <th>ID</th>
     <th>ibeacon</th>
     <th>game</th>
+    <th>qr</th>
     <th>remark</th>
     <th>State</th>
     <th>Operate</th>
@@ -16,6 +17,7 @@
     <td><%= bgame.id %></td>
     <td><%= bgame.beacon_name %></td>
     <td><%= bgame.game_name %></td>
+    <td><img src="<%= bgame.get_qr_img %>" width='100px'> </td>
     <td><%= bgame.remark %></td>
     <td><%= bgame.state %></td>
     <td>  <%= link_to '克隆', [:clone,:admin, bgame], data: {confirm: "Are you clone one !"} %> |  <%= link_to "Edit", edit_admin_bgame_path(bgame) %> | <%= link_to "delete", admin_bgame_path(bgame), :method => :delete, confirm: "确认删除?" %></td>
