--- a/app/views/admin/bgames/index.html.erb
+++ b/app/views/admin/bgames/index.html.erb
@@ -6,6 +6,7 @@
     <th>ID</th>
     <th>ibeacon</th>
     <th>game</th>
+    <th>link</th>
     <th>qr</th>
     <th>remark</th>
     <th>State</th>
@@ -17,6 +18,7 @@
     <td><%= bgame.id %></td>
     <td><%= bgame.beacon_name %></td>
     <td><%= bgame.game_name %></td>
+    <td><%= bgame.game_link %></td>
     <td><img src="<%= bgame.get_qr_img %>" width='100px'> </td>
     <td><%= bgame.remark %></td>
     <td><%= bgame.state %></td>
@@ -24,4 +26,5 @@
   </tr>
   <% end %>
 </table>
+<%= paginate @bgames %>
 <% end %>
