--- a/app/views/admin/banners/_form.html.erb
+++ b/app/views/admin/banners/_form.html.erb
@@ -22,6 +22,28 @@
     </div>
 
     <div class="control-group">
+      <label class="control-label">material_id</label>
+      <div class="controls">
+        <%= f.text_field :material_id, required: false %>
+      </div>
+    </div>
+
+    <div class="control-group">
+      <label class="control-label">component_id</label>
+      <div class="controls">
+        <%= f.text_field :component_id, required: false %>
+      </div>
+    </div>
+
+    <div class="control-group">
+      <label class="control-label">Btype</label>
+      <div class="controls">
+        <%= f.select :btype,Admin::BannersController::Btype, required: false %>
+      </div>
+    </div>
+
+
+    <div class="control-group">
       <label class="control-label">State</label>
       <div class="controls">
         <%= f.select :state, Admin::BannersController::State, required: true %>
