--- a/app/views/admin/banners/_form.html.erb
+++ b/app/views/admin/banners/_form.html.erb
@@ -31,7 +31,7 @@
     <div class="control-group">
       <label class="control-label">component_id</label>
       <div class="controls">
-        <%= f.text_field :component_id, required: false %>
+        <%= f.text_field :activity_id, required: false %>
       </div>
     </div>
 
