--- a/app/views/admin/banners/index.html.erb
+++ b/app/views/admin/banners/index.html.erb
@@ -5,7 +5,7 @@
   <tr>
     <th>ID</th>
     <th>material_id</th>
-    <th>component_id</th>
+    <th>activity_id</th>
     <th>banner type</th>
     <th>Image</th>
     <th>link</th>
@@ -18,7 +18,7 @@
   <tr>
     <td><%= banner.id %></td>
     <td><%= banner.material_id %></td>
-    <td><%= banner.component_id %></td>
+    <td><%= banner.activity_id %></td>
     <td><%= banner.btype %></td>
     <td><%= banner.image_url %></td>
     <td><%= banner.link %></td>
